crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__ipython_escape_command_line_continuation_with_unix_eol_and_eof.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: ipython_escape_command_line_continuation_with_eol_and_eof(UNIX_EOL)
---
## Tokens
```
[
    (
        IpyEscapeCommand {
            value: "matplotlib ",
            kind: Magic,
        },
        0..14,
    ),
    (
        Newline,
        14..14,
    ),
]
```
