crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__line_comment_long.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(&source)
---
## Tokens
```
[
    (
        Int(
            99232,
        ),
        0..5,
    ),
    (
        Comment,
        7..12,
    ),
    (
        Newline,
        12..12,
    ),
]
```
