crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__numbers.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Int(
            47,
        ),
        0..4,
    ),
    (
        Int(
            10,
        ),
        5..9,
    ),
    (
        Int(
            13,
        ),
        10..16,
    ),
    (
        Int(
            0,
        ),
        17..18,
    ),
    (
        Int(
            123,
        ),
        19..22,
    ),
    (
        Int(
            1234567890,
        ),
        23..36,
    ),
    (
        Float(
            Float(0x3fc99999, 0x9999999a) [0.2],
        ),
        37..40,
    ),
    (
        Float(
            Float(0x40590000, 0x0) [100],
        ),
        41..45,
    ),
    (
        Float(
            Float(0x40a06800, 0x0) [2100],
        ),
        46..51,
    ),
    (
        Complex {
            real: Float(0x0, 0x0) [0],
            imag: Float(0x40000000, 0x0) [2],
        },
        52..54,
    ),
    (
        Complex {
            real: Float(0x0, 0x0) [0],
            imag: Float(0x40019999, 0x9999999a) [2.2],
        },
        55..59,
    ),
    (
        Int(
            0,
        ),
        60..63,
    ),
    (
        Int(
            0x995DC9BBDF1939FA,
        ),
        64..82,
    ),
    (
        Int(
            0x995DC9BBDF1939FA995DC9BBDF1939FA,
        ),
        83..117,
    ),
    (
        Newline,
        117..117,
    ),
]
```
